# gsl_iris

./: CMakeLists.txt  README.txt  buildAndTest.sh
.github/workflows/: cmake.yml
include/: initialiser.hpp  layers.hpp  model.hpp  training.hpp  variables.hpp
src/: CMakeLists.txt  gsl_layers.cpp  gsl_layers.hpp  gsl_training.cpp  gsl_training.hpp  gsl_variables.cpp  gsl_variables.hpp  layers.cpp  layers.hpp
src/initialiser/: CMakeLists.txt  gsl_initialiser.cpp  gsl_initialiser.hpp  initialiser.cpp
test/: CMakeLists.txt  run_unit_tests.cpp  test_initialiser.cpp  test_layers.cpp  test_model.cpp  test_trainer.cpp  test_training.cpp  test_variables.cpp  utils.hpp
